<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts" />

        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_invite"
            android:title="@string/invite_friends" />


        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />


        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />


    </group>


    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />


        <item
            android:id="@+id/nav_exit_app"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit_app" />
    </group>


</menu>
